samples/_failures_safe/1761148789_64c67b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_055a8f24.c: In function ‘print_token’:
./samples/SAFE/__tmp_055a8f24.c:157:53: error: ‘TOKEN_’ undeclared (first use in this function)
  157 |     if (token.type >= TOKEN_NUMBER && token.type <= TOKEN_
      |                                                     ^~~~~~
./samples/SAFE/__tmp_055a8f24.c:157:53: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_055a8f24.c:157:59: error: expected ‘)’ at end of input
  157 |     if (token.type >= TOKEN_NUMBER && token.type <= TOKEN_
      |        ~                                                  ^
      |                                                           )
./samples/SAFE/__tmp_055a8f24.c:157:5: error: expected declaration or statement at end of input
  157 |     if (token.type >= TOKEN_NUMBER && token.type <= TOKEN_
      |     ^~
